# team-mgt

./: .gitignore  HowTo.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
portable/: README.txt  team-mgt.sqlite
scripts/: build-portable.ps1
src/: App.tsx  index.html  main.js  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-hooks.nsh
