[package]
name = "team-mgt"
version = "1.0.0-beta.1"
description = "Team activity and progress management app"
authors = ["team-mgt"]
edition = "2021"

[lib]
name = "team_mgt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
calamine = "0.26"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
rust_xlsxwriter = "0.79"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_System_Threading",
] }
